# evseyev-test-task

./: .envrc.dist  .gitignore  Cargo.toml  docker-compose.dist.env  docker-compose.yml  generate-wallets.sh  solana-cli-config.localnet.yml
app/: Cargo.toml  config.dist.yaml
app/src/: cli.rs  cmd.rs  config.rs  main.rs  token.rs  wallet.rs  worker.rs
docker/dns/: Corefile
scripts/: prepare-localnet.sh
workdir/: .gitignore
